logs/action/web/main/core.log
2026-03-07 00:37:20,196 - ERROR - Compilation failed for core:
2026-03-07 00:37:20,197 - ERROR - shared:INFO: (Emscripten: Running sanity checks)
/home/runner/work/NextSSL/NextSSL/src/primitives/aead/chacha20_poly1305/monocypher.c:286:48: warning: shift count >= width of type [-Wshift-count-overflow]
  286 |     store32_le(len_buf + 4, (uint32_t)(ad_size >> 32));
      |                                                ^  ~~
/home/runner/work/NextSSL/NextSSL/src/primitives/aead/chacha20_poly1305/monocypher.c:288:51: warning: shift count >= width of type [-Wshift-count-overflow]
  288 |     store32_le(len_buf + 12, (uint32_t)(text_size >> 32));
      |                                                   ^  ~~
/home/runner/work/NextSSL/NextSSL/src/primitives/aead/chacha20_poly1305/monocypher.c:328:48: warning: shift count >= width of type [-Wshift-count-overflow]
  328 |     store32_le(len_buf + 4, (uint32_t)(ad_size >> 32));
      |                                                ^  ~~
/home/runner/work/NextSSL/NextSSL/src/primitives/aead/chacha20_poly1305/monocypher.c:330:51: warning: shift count >= width of type [-Wshift-count-overflow]
  330 |     store32_le(len_buf + 12, (uint32_t)(text_size >> 32));
      |                                                   ^  ~~
4 warnings generated.
/home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c:22:5: error: use of undeclared identifier 'sha256_ctx'
   22 |     sha256_ctx ctx;
      |     ^
/home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c:23:18: error: use of undeclared identifier 'ctx'
   23 |     sha256_init(&ctx);
      |                  ^
/home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c:24:20: error: use of undeclared identifier 'ctx'
   24 |     sha256_update(&ctx, (const uint8_t *)"abc", 3);
      |                    ^
/home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c:25:19: error: use of undeclared identifier 'ctx'
   25 |     sha256_final(&ctx, digest);
      |                   ^
4 errors generated.
emcc: error: '/home/runner/work/NextSSL/NextSSL/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/runner/work/NextSSL/NextSSL/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O2 -Wall -ffile-prefix-map=.=. -fmacro-prefix-map=.=. -Wno-builtin-macro-redefined -D__DATE__= -D__TIME__= -D__TIMESTAMP__= -I/home/runner/work/NextSSL/NextSSL/src -I/home/runner/work/NextSSL/NextSSL/src/include -I/home/runner/work/NextSSL/NextSSL/src/primitives -I/home/runner/work/NextSSL/NextSSL/src/primitives/hash/fast/blake3 -I/home/runner/work/NextSSL/NextSSL/src/primitives/hash/memory_hard/utils -I/home/runner/work/NextSSL/NextSSL/src/legacy/alive -I/home/runner/work/NextSSL/NextSSL/src/legacy/unsafe -I/home/runner/work/NextSSL/NextSSL/src/utils -I/home/runner/work/NextSSL/NextSSL/src/primitives/cipher/aes_core -I/home/runner/work/NextSSL/NextSSL/src/primitives/cipher -I/home/runner/work/NextSSL/NextSSL/src/primitives/aead -I/home/runner/work/NextSSL/NextSSL/src/primitives/mac -I/home/runner/work/NextSSL/NextSSL/src/primitives/aead/chacha20_poly1305 -I/home/runner/work/NextSSL/NextSSL/src/primitives/ecc/ed25519 -I/home/runner/work/NextSSL/NextSSL/src/primitives/ecc/curve448 -I/home/runner/work/NextSSL/NextSSL/src/primitives/ecc/elligator2 -I/home/runner/work/NextSSL/NextSSL/src/primitives/ecc/ristretto255 -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/common -I/home/runner/work/NextSSL/NextSSL/src/primitives/hash/sponge_xof/shake -I/home/runner/work/NextSSL/NextSSL/src -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 -DBLAKE3_NO_SSE2 -DBLAKE3_NO_SSE41 -DBLAKE3_NO_THREADING -DBLAKE3_ATOMICS=0 -DEXCLUDE_SPHINCS -DAES___=128 -DFF_X=1 -DHAVE_ED448=1 /home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c -c -o /tmp/emscripten_temp_4di6jtq0/wasm_selftest_43.o' failed (returned 1)

2026-03-07 00:45:48,023 - ERROR - Compilation failed for core:
2026-03-07 00:45:48,024 - ERROR - shared:INFO: (Emscripten: Running sanity checks)
/home/runner/work/NextSSL/NextSSL/src/primitives/aead/chacha20_poly1305/monocypher.c:286:48: warning: shift count >= width of type [-Wshift-count-overflow]
  286 |     store32_le(len_buf + 4, (uint32_t)(ad_size >> 32));
      |                                                ^  ~~
/home/runner/work/NextSSL/NextSSL/src/primitives/aead/chacha20_poly1305/monocypher.c:288:51: warning: shift count >= width of type [-Wshift-count-overflow]
  288 |     store32_le(len_buf + 12, (uint32_t)(text_size >> 32));
      |                                                   ^  ~~
/home/runner/work/NextSSL/NextSSL/src/primitives/aead/chacha20_poly1305/monocypher.c:328:48: warning: shift count >= width of type [-Wshift-count-overflow]
  328 |     store32_le(len_buf + 4, (uint32_t)(ad_size >> 32));
      |                                                ^  ~~
/home/runner/work/NextSSL/NextSSL/src/primitives/aead/chacha20_poly1305/monocypher.c:330:51: warning: shift count >= width of type [-Wshift-count-overflow]
  330 |     store32_le(len_buf + 12, (uint32_t)(text_size >> 32));
      |                                                   ^  ~~
4 warnings generated.
cache:INFO: generating system asset: symbol_lists/c4c6d4249c65015417905d0cf0f2248647634581.json... (this will be cached in "/home/runner/work/NextSSL/NextSSL/emsdk/upstream/emscripten/cache/symbol_lists/c4c6d4249c65015417905d0cf0f2248647634581.json" for subsequent builds)
cache:INFO:  - ok
wasm-ld: error: /tmp/emscripten_temp_0i6jl6i4/wasm_selftest_43.o: undefined symbol: sha256_init
wasm-ld: error: /tmp/emscripten_temp_0i6jl6i4/wasm_selftest_43.o: undefined symbol: sha256_update
wasm-ld: error: /tmp/emscripten_temp_0i6jl6i4/wasm_selftest_43.o: undefined symbol: sha256_final
emcc: error: '/home/runner/work/NextSSL/NextSSL/emsdk/upstream/bin/wasm-ld -o /home/runner/work/NextSSL/NextSSL/bin/web/main/core.wasm --no-entry -L/home/runner/work/NextSSL/NextSSL/emsdk/upstream/emscripten/cache/sysroot/lib/wasm32-emscripten /tmp/emscripten_temp_0i6jl6i4/aes_core_0.o /tmp/emscripten_temp_0i6jl6i4/aes_ecb_1.o /tmp/emscripten_temp_0i6jl6i4/aes_cbc_2.o /tmp/emscripten_temp_0i6jl6i4/aes_cfb_3.o /tmp/emscripten_temp_0i6jl6i4/aes_ofb_4.o /tmp/emscripten_temp_0i6jl6i4/aes_ctr_5.o /tmp/emscripten_temp_0i6jl6i4/aes_xts_6.o /tmp/emscripten_temp_0i6jl6i4/aes_kw_7.o /tmp/emscripten_temp_0i6jl6i4/aes_fpe_8.o /tmp/emscripten_temp_0i6jl6i4/aes_gcm_9.o /tmp/emscripten_temp_0i6jl6i4/aes_ccm_10.o /tmp/emscripten_temp_0i6jl6i4/aes_ocb_11.o /tmp/emscripten_temp_0i6jl6i4/aes_eax_12.o /tmp/emscripten_temp_0i6jl6i4/aes_siv_13.o /tmp/emscripten_temp_0i6jl6i4/aes_gcm_siv_14.o /tmp/emscripten_temp_0i6jl6i4/aes_poly1305_15.o /tmp/emscripten_temp_0i6jl6i4/aes_cmac_16.o /tmp/emscripten_temp_0i6jl6i4/siphash_17.o /tmp/emscripten_temp_0i6jl6i4/hkdf_18.o /tmp/emscripten_temp_0i6jl6i4/keypair_19.o /tmp/emscripten_temp_0i6jl6i4/seed_20.o /tmp/emscripten_temp_0i6jl6i4/sign_21.o /tmp/emscripten_temp_0i6jl6i4/key_exchange_22.o /tmp/emscripten_temp_0i6jl6i4/fe_23.o /tmp/emscripten_temp_0i6jl6i4/add_scalar_24.o /tmp/emscripten_temp_0i6jl6i4/verify_25.o /tmp/emscripten_temp_0i6jl6i4/ge_26.o /tmp/emscripten_temp_0i6jl6i4/sc_27.o /tmp/emscripten_temp_0i6jl6i4/sha512_28.o /tmp/emscripten_temp_0i6jl6i4/fe_448_29.o /tmp/emscripten_temp_0i6jl6i4/ge_448_30.o /tmp/emscripten_temp_0i6jl6i4/curve448_det_31.o /tmp/emscripten_temp_0i6jl6i4/ed448_32.o /tmp/emscripten_temp_0i6jl6i4/curve448_33.o /tmp/emscripten_temp_0i6jl6i4/elligator2_34.o /tmp/emscripten_temp_0i6jl6i4/ristretto255_35.o /tmp/emscripten_temp_0i6jl6i4/chacha20_poly1305_36.o /tmp/emscripten_temp_0i6jl6i4/monocypher_37.o /tmp/emscripten_temp_0i6jl6i4/sha2_38.o /tmp/emscripten_temp_0i6jl6i4/fips202_39.o /tmp/emscripten_temp_0i6jl6i4/shake_40.o /tmp/emscripten_temp_0i6jl6i4/drbg_41.o /tmp/emscripten_temp_0i6jl6i4/base_encryption_42.o /tmp/emscripten_temp_0i6jl6i4/wasm_selftest_43.o /home/runner/work/NextSSL/NextSSL/emsdk/upstream/emscripten/cache/sysroot/lib/wasm32-emscripten/crt1.o -lGL-getprocaddr -lal -lhtml5 -lstandalonewasm-nocatch -lstubs -lc -ldlmalloc -lcompiler_rt -lc++-noexcept -lc++abi-noexcept -lsockets -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr /tmp/tmp1hl65luplibemscripten_js_symbols.so --strip-debug --export=nextssl_wasm_selftest --export=emscripten_stack_get_current --export=_emscripten_stack_restore --export=_emscripten_stack_alloc --export-if-defined=__start_em_asm --export-if-defined=__stop_em_asm --export-if-defined=__start_em_lib_deps --export-if-defined=__stop_em_lib_deps --export-if-defined=__start_em_js --export-if-defined=__stop_em_js --export-table -z stack-size=65536 --no-growable-memory --initial-heap=16777216 --table-base=1 --global-base=1024' failed (returned 1)

